bs-manifest/bs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bs-app
  labels:
    app: bs-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bs-app
  template:
    metadata:
      labels:
        app: bs-app
    spec:
      containers:
        - name: bs-app
          image: ifejesuaj/brightsun
          ports:
            - containerPort: 8060
