bs-manifest/bs-service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: bs-svc
  labels:
    app: bs-svc
spec:
  type: ClusterIP
  selector:
    app: bs-app
  ports:
    - port: 5080
      targetPort: 8060
      name: bs-svc
