bs-manifest/bs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bs-ingress
  annotations:
   # nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod  # Use the ClusterIssuer defined earlier
spec:
  ingressClassName: nginx
  rules:
    - host: k8s.bs.247travels.com  # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bs-svc
                port:
                  number: 5080
    

  tls:
    - hosts:
        - k8s.bs.247travels.com
      secretName: cert-secret
